--- a/src/components/Month/month.css
+++ b/src/components/Month/month.css
@@ -2,8 +2,29 @@
   width: 70%;
   margin: 5% auto;
   margin-top: 1%;
+  background: aliceblue;
 }
 
 .react-calendar__month-view__weekdays__weekday abbr {
   text-decoration: none;
+}
+.react-calendar__navigation button {
+  background-image: linear-gradient(
+    273.38deg,
+    rgb(237, 198, 138) 7.24%,
+    rgb(225, 167, 130) 56.44%,
+    rgb(215, 132, 120) 92.81%
+  );
+  color: white;
+  font-size: 25px;
+}
+
+.react-calendar__navigation {
+  margin-bottom: 2%;
+}
+
+.react-calendar__navigation__label span {
+  color: white;
+  font-size: 21px;
+  font-weight: 600;
 }
