--- a/src/components/Rooms/rooms.css
+++ b/src/components/Rooms/rooms.css
@@ -29,7 +29,7 @@
   font-weight: 600;
   position: relative;
   /* width: 25%; */
-  /* height: 100px; */
+  height: 100%;
   border: 1px solid;
   padding: 3%;
   /* border-radius: 10px; */
