--- a/src/pages/LoginPage/login.css
+++ b/src/pages/LoginPage/login.css
@@ -1,5 +1,5 @@
-body {
-  /* overflow-y: hidden; */
+* {
+  box-sizing: border-box;
 }
 
 .main_login {
@@ -13,10 +13,16 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 5%;
+}
+.login_desc h2 {
+  font-size: 45px;
+  line-height: 0;
 }
 
 .login_desc p {
-  width: 57%;
+  font-size: 25px;
+  width: 60%;
   text-align: center;
   line-height: 35px;
 }
@@ -25,12 +31,35 @@ body {
   cursor: pointer;
 }
 
+.login_btn {
+  transition: 0.8s;
+  width: fit-content;
+  font-size: 23px;
+  margin: 3%;
+  cursor: pointer;
+}
+
+.login_btn:hover {
+  transform: scale(1.2);
+  transition: 0.8s;
+  text-shadow: 3px 4px 7px rgba(81, 67, 21, 0.8);
+}
+
 .login_desc button {
+  cursor: pointer;
+  margin-top: 2%;
   background: black;
   color: white;
-  font-size: 17px;
+  font-size: 22px;
   padding: 2%;
-  border-radius: 35px;
+  border-radius: 15px;
+  transition: 0.8s;
+}
+.login_desc button:hover {
+  transform: scale(1.2);
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px,
+    rgba(0, 0, 0, 0.22) 0px 15px 12px;
+  transition: 0.8s;
 }
 
 .vector1 {
@@ -53,24 +82,33 @@ body {
 }
 
 .pencil_img {
-  position: absolute;
+  position: fixed;
   right: 5%;
-  top: 225px;
+  bottom: 0;
   width: 345px;
 }
 
-.modal_register {
-  position: absolute;
+/* .modal_register {
+  position: fixed;
   z-index: 3;
-  top: 200px;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  margin: auto;
   background: white;
   display: flex;
   flex-direction: column;
   width: 24%;
   align-items: center;
-  height: 255px;
+  height: fit-content;
   justify-content: space-around;
   border-radius: 30px;
+}
+
+.modal_register h3 {
+  font-size: 37px;
+  line-height: 20px;
 }
 
 .modal_register button {
@@ -79,7 +117,7 @@ body {
   font-size: 17px;
   padding: 2%;
   border-radius: 35px;
-}
+} */
 
 .modal_login {
   position: absolute;
@@ -108,7 +146,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  height: 115px;
+  height: 150px;
 }
 
 .inputs2 {
@@ -121,5 +159,9 @@ body {
 
 .register_inp {
   width: 90%;
-  height: 23px;
+  height: 35px;
+}
+
+.register_inp::placeholder {
+  font-size: 20px;
 }
